--- a/build.gradle
+++ b/build.gradle
@@ -5,10 +5,10 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.0.0'
-        classpath 'com.github.dcendents:android-maven-gradle-plugin:1.3'
-        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.3.1'
-        classpath 'nl.javadude.gradle.plugins:license-gradle-plugin:0.11.0'
+        classpath 'com.android.tools.build:gradle:2.3.1'
+        //classpath 'com.github.dcendents:android-maven-gradle-plugin:1.3'
+        //classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.3.1'
+        //classpath 'nl.javadude.gradle.plugins:license-gradle-plugin:0.11.0'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -20,4 +20,5 @@ allprojects {
     repositories {
         jcenter()
     }
+
 }
