--- a/recycler-itemdecoration/build.gradle
+++ b/recycler-itemdecoration/build.gradle
@@ -4,12 +4,12 @@ apply plugin: 'com.android.library'
 //apply plugin: 'license'
 
 android {
-    compileSdkVersion COMPILE_SDK_VERSION as int
-    buildToolsVersion BUILD_TOOLS_VERSION
+    compileSdkVersion project.ANDROID_BUILD_SDK_VERSION as int
+    buildToolsVersion project.ANDROID_BUILD_TOOLS_VERSION
 
     defaultConfig {
         minSdkVersion 14
-        targetSdkVersion COMPILE_SDK_VERSION as int
+        targetSdkVersion project.ANDROID_BUILD_TARGET_SDK_VERSION as int
         versionCode VERSION_CODE as int
         versionName VERSION_NAME
     }
@@ -23,7 +23,7 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:recyclerview-v7:25.3.1'
+    compile "com.android.support:recyclerview-v7:${project.ANDROID_SUPPORT_LIB_VERSION}"
 }
 
 //// for maven
