--- a/recycler-itemdecoration/build.gradle
+++ b/recycler-itemdecoration/build.gradle
@@ -4,12 +4,12 @@ apply plugin: 'com.android.library'
 //apply plugin: 'license'
 
 android {
-    compileSdkVersion project.ANDROID_BUILD_SDK_VERSION as int
-    buildToolsVersion project.ANDROID_BUILD_TOOLS_VERSION
+    compileSdkVersion rootProject.compileSdkVersion
+    buildToolsVersion rootProject.buildToolsVersion
 
     defaultConfig {
         minSdkVersion 14
-        targetSdkVersion project.ANDROID_BUILD_TARGET_SDK_VERSION as int
+        targetSdkVersion rootProject.targetSdkVersion
         versionCode VERSION_CODE as int
         versionName VERSION_NAME
     }
@@ -23,7 +23,7 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation "com.android.support:recyclerview-v7:${project.ANDROID_SUPPORT_LIB_VERSION}"
+    implementation "com.android.support:recyclerview-v7:${rootProject.supportLibraryVersion}"
 }
 
 //// for maven
