--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,17 +1,12 @@
 apply plugin: 'com.android.application'
 
-repositories {
-    jcenter()
-}
-
 android {
-    compileSdkVersion 25
-    buildToolsVersion "26.0.0"
+    compileSdkVersion rootProject.compileSdkVersion
 
     defaultConfig {
         applicationId "com.github.magiepooh.recycleritemdecoration"
-        minSdkVersion 14
-        targetSdkVersion 23
+        minSdkVersion rootProject.minSdkVersion
+        targetSdkVersion rootProject.targetSdkVersion
         versionCode 1
         versionName "1.0"
     }
@@ -21,15 +16,14 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-    android.enforceUniquePackageName = false
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:25.3.1'
-    compile 'com.android.support:recyclerview-v7:25.3.1'
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation 'androidx.appcompat:appcompat:1.0.2'
+    implementation 'androidx.recyclerview:recyclerview:1.0.0'
 
-    compile 'jp.satorufujiwara:recyclerview-binder:1.2.0'
+    implementation 'jp.satorufujiwara:recyclerview-binder:1.2.0'
 
-    compile project(':recycler-itemdecoration')
+    implementation project(':recycler-itemdecoration')
 }
