--- a/build.gradle
+++ b/build.gradle
@@ -2,10 +2,11 @@
 
 buildscript {
     repositories {
+        google()
         jcenter()
     }
     dependencies {
-        //classpath 'com.android.tools.build:gradle:2.3.1'
+        classpath "com.android.tools.build:gradle:3.5.0"
         //classpath 'com.github.dcendents:android-maven-gradle-plugin:1.3'
         //classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.3.1'
         //classpath 'nl.javadude.gradle.plugins:license-gradle-plugin:0.11.0'
@@ -16,9 +17,14 @@ buildscript {
 }
 
 allprojects {
-
     repositories {
+        google()
         jcenter()
     }
+}
 
+ext {
+    minSdkVersion = 14
+    compileSdkVersion = 28
+    targetSdkVersion = 27
 }
