--- a/gradle.properties
+++ b/gradle.properties
@@ -17,6 +17,9 @@
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
 
+android.useAndroidX=true
+android.enableJetifier=true
+
 VERSION_CODE=4
 VERSION_NAME=1.1.2
 
